[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/menu/menu_options.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/JetBrainsMono/JetBrainsMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/styles/panel_main_bg.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/styles/lineedit_opt.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/styles/button_main.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/styles/button_main_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/styles/button_main_focus.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/styles/button_main_hover.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.929412, 0.929412, 0.929412, 1 )

[node name="MenuMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 924.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "ROADS UNTRAVELED - Options"

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
margin_top = 58.0
margin_right = 924.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 2 )
custom_styles/panel = SubResource( 2 )

[node name="Panel2" type="Panel" parent="Panel/VBoxContainer"]
margin_top = 75.0
margin_right = 924.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 3 )
custom_styles/panel = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 93.0
margin_right = 924.0
margin_bottom = 393.0
custom_constants/separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
custom_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 42.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 14.0
margin_right = 400.0
margin_bottom = 28.0
rect_min_size = Vector2( 400, 0 )
text = "Fullscreen Window Mode"

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 484.0
margin_bottom = 42.0
rect_min_size = Vector2( 80, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/hover_pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 500.0
margin_bottom = 78.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 400.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
text = "Mouse Sensitivity"

[node name="LineEdit_MouseSensitivity" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 404.0
margin_right = 484.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "60"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 500.0
margin_bottom = 114.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 400.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
text = "Global UI Scaling"

[node name="LineEdit_UIScaling" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 404.0
margin_right = 484.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "100"

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 500.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 400.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
text = "Global Audio Volume"

[node name="LineEdit_GlobalVolume" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 404.0
margin_right = 484.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 4 )
text = "100"

[node name="Panel3" type="Panel" parent="Panel/VBoxContainer"]
margin_top = 408.0
margin_right = 924.0
margin_bottom = 411.0
rect_min_size = Vector2( 0, 3 )
custom_styles/panel = ExtResource( 3 )

[node name="button_quit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 426.0
margin_right = 50.0
margin_bottom = 466.0
rect_min_size = Vector2( 50, 40 )
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
text = "Back"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="text_changed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/LineEdit_MouseSensitivity" to="." method="_on_LineEdit_MouseSensitivity_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/LineEdit_UIScaling" to="." method="_on_LineEdit_UIScaling_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/button_quit" to="." method="_on_button_quit_pressed"]
